--- a/package.json
+++ b/package.json
@@ -13,9 +13,17 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "@material-tailwind/react": "^2.1.9",
+    "@react-three/fiber": "^8.16.2",
+    "animejs": "^3.2.2",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.1.7",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.1.0",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.11.1",
@@ -24,6 +32,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.10.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
