--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.10.0",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "@react-three/fiber": "^8.16.2",
     "animejs": "^3.2.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
+    "mongodb": "^6.6.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
